testdata/invalid/invalid_struct_duplicate_name.bop
struct Test {
	int64 foo;
	int64 foo;
}